--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,8 +1,15 @@
 <ul>
   <% @bookmarks.each do |bookmark| %>
     <li><%= bookmark %></li>
-    <% end %>
-  </ul>
+  <% end %>
+</ul>
+
+<form action='/save_bookmark' method='post'>
+  <label name='add_bookmark'>Add new bookmark</label>
+  <input name='add_bookmark' type='text'>
+  <button type='submit'>Go!</button>
+</form>
 
 
-  
+bookmark added
+http://www.bbc.co.uk
