--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -4,12 +4,9 @@
   <% end %>
 </ul>
 
-<form action='/save_bookmark' method='post'>
-  <label name='add_bookmark'>Add new bookmark</label>
-  <input name='add_bookmark' type='text'>
-  <button type='submit'>Go!</button>
+<form action='/bookmarks/new' method='get'>
+  <button type='submit'>Add bookmark</button>
 </form>
-
 
 bookmark added
 http://www.bbc.co.uk
