adding bookmarks and refactoring

--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -8,5 +8,5 @@
   <button type='submit'>Add bookmark</button>
 </form>
 
-bookmark added
-http://www.bbc.co.uk
+<!-- bookmark added
+http://www.bbc.co.uk -->
