--- a/views/bookmarks/new.erb
+++ b/views/bookmarks/new.erb
@@ -1,4 +1,4 @@
-<form action='/save_bookmark' method='post'>
+<form action='/bookmarks' method='post'>
   <label name='add_bookmark'>Add new bookmark</label>
   <input name='add_bookmark' type='text'>
   <button type='submit'>Go!</button>
