added failing test to update bookmarks, along with partial solution

--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -9,6 +9,7 @@
     <% end %>
   </ul>
   <button type='submit'>Delete</button>
+  <button type='submit' formaction="/bookmarks/update">Update</button>
 </form>
 
 
